--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="common_app_name">common</string>
+
+    <!-- 测试下app 和子module下资源问题-->
+    <string name="app_str">我是module下的字符串</string>
 </resources>
